# mcp-rosreestr

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  Dockerfile  README.md  glama.json  pyproject.toml  server.json
src/mcp_rosreestr/: __init__.py  cache.py  client.py  constants.py  errors.py  schemas.py  server.py  tools.py
tests/: conftest.py  test_cache.py  test_cli.py  test_client.py  test_schemas.py  test_tools.py
tests/fixtures/: nspd_apartment.json  nspd_empty.json  nspd_land_plot.json
