[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "atomno-mcp-rosreestr"
version = "0.1.1"
description = "MCP server for Russian Rosreestr open cadastral data: lookup by cadastral number / address / coordinates, cadastral value with history."
readme = "README.md"
license = { text = "MIT" }
authors = [
    { name = "atomno-mcp", email = "hello@atomno-mcp.ru" },
]
keywords = [
    "mcp",
    "model-context-protocol",
    "rosreestr",
    "nspd",
    "cadastral",
    "real-estate",
    "ru",
    "russia",
    "atomno",
    "fintech",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Financial and Insurance Industry",
    "Intended Audience :: Legal Industry",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: Russian",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3 :: Only",
    "Framework :: AsyncIO",
    "Topic :: Office/Business",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]
requires-python = ">=3.11"
dependencies = [
    "mcp>=1.2.0,<2.0.0",
    "httpx>=0.27.0,<1.0.0",
    "pydantic>=2.6.0,<3.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0,<9.0.0",
    "pytest-asyncio>=0.23.0,<1.0.0",
    "pytest-cov>=5.0.0,<6.0.0",
    "respx>=0.21.0,<1.0.0",
    "ruff>=0.5.0,<1.0.0",
]
release = [
    "build>=1.2.0,<2.0.0",
    "twine>=5.1.0,<6.0.0",
]

[project.scripts]
atomno-mcp-rosreestr = "mcp_rosreestr.server:main"
mcp-rosreestr = "mcp_rosreestr.server:main"

[project.urls]
Homepage = "https://github.com/atomno-mcp/mcp-rosreestr"
Repository = "https://github.com/atomno-mcp/mcp-rosreestr"
Issues = "https://github.com/atomno-mcp/mcp-rosreestr/issues"
Changelog = "https://github.com/atomno-mcp/mcp-rosreestr/blob/main/CHANGELOG.md"
Documentation = "https://github.com/atomno-mcp/mcp-rosreestr#readme"

[tool.hatch.build.targets.wheel]
packages = ["src/mcp_rosreestr"]

[tool.hatch.build.targets.sdist]
include = [
    "src/mcp_rosreestr/**",
    "tests/**",
    "README.md",
    "LICENSE",
    "CHANGELOG.md",
    "pyproject.toml",
    ".env.example",
    "Dockerfile",
    "glama.json",
]
exclude = [
    "**/__pycache__/**",
    "**/*.pyc",
    "**/*.sqlite",
    "**/*.sqlite-journal",
    ".venv/**",
    ".pytest_cache/**",
    ".coverage",
    "htmlcov/**",
    "dist/**",
    "build/**",
    "*.egg-info/**",
]

[tool.pytest.ini_options]
minversion = "8.0"
addopts = "-v --strict-markers"
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.coverage.run]
source = ["src/mcp_rosreestr"]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.:",
    "raise NotImplementedError",
]
show_missing = true
skip_covered = false

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "ASYNC"]
ignore = ["E501"]
